# example-docker-action

./: Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml
src/example_docker_action/: example.py
