[project]
name = "example-docker-action"
description = ""
version = "0.1.0"
license = {text = "MIT License"}
requires-python = ">=3.12"
authors = [{name = "John Smith", email = "john@example.com"}]
readme = "README.md"
dependencies = [
    "httpx>=0.28.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.27.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.5",
    "rich>=13.9.4",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -vvv"
testpaths = [
    "tests"    
]
pythonpath = "src"

[tool.ruff]
target-version = "py312"

# Set the maximum line length.
line-length = 160

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501", "U", "I"]
